[package]
name = "dag-cbor-references"
version = "0.1.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>"]
description = "Extract blake3 ipld links from dag-cbor blocks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/n0-computer/dag-cbor-references"
keywords = ["ipld"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
hex = "0.4.3"
